convertx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: convertx-ing
  namespace: homelab
  labels:
    name: convertx-ing
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: convertx-svc
                port:
                  number: 3000
